--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="FontConverter">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Document</title>
+    <title>Font Converter</title>
     
     <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="dist/main.css">
@@ -15,7 +15,7 @@
       <script src="../../assets/js/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body ng-controller="MainController">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Template</a>
+          <a class="navbar-brand" href="#">SSD1306 Font Converter</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -40,9 +40,15 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Font Converter for SSD1306</h1>
+        <p class="lead">Select the font family and other settings to generate a new font file</p>
       </div>
+      <div>
+		  <div ng-view>
+		
+		  </div>
+		 
+	  </div> 
 
     </div><!-- /.container -->
 
