--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,16 @@
       <script src="../../assets/js/html5shiv.js"></script>
       <script src="../../assets/js/respond.min.js"></script>
     <![endif]-->
+    <script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-327939-22', 'auto');
+	  ga('send', 'pageview');
+	
+	</script>
 </head>
 <body ng-controller="MainController">
 
@@ -25,13 +35,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SSD1306 Font Converter</a>
+          <a class="navbar-brand" href="#">SSD1306 Tools</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -39,10 +47,7 @@
 
     <div class="container">
 
-      <div class="starter-template">
-        <h1>Font Converter for SSD1306</h1>
-        <p class="lead">Select the font family and other settings to generate a new font file</p>
-      </div>
+
       <div>
 		  <div ng-view>
 		
